--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "license": "",
   "dependencies": {
     "@remix-run/react": "^1.2.1",
+    "@remix-run/serve": "^1.2.1",
+    "@supabase/supabase-js": "^1.30.3",
+    "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.1",
-    "@remix-run/serve": "^1.2.1",
-    "cross-env": "^7.0.3"
+    "remix-auth": "^3.2.1",
+    "remix-auth-supabase": "^3.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
