--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/dev": "^1.2.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "openapi-typescript": "^5.2.0",
     "typescript": "^4.1.2"
   },
   "engines": {
@@ -29,6 +30,7 @@
     "postinstall": "remix setup node",
     "build": "cross-env NODE_ENV=production remix build",
     "dev": "cross-env NODE_ENV=development node -r dotenv/config node_modules/.bin/remix dev",
-    "start": "cross-env NODE_ENV=production remix-serve build"
+    "start": "cross-env NODE_ENV=production remix-serve build",
+    "generate-types:supabase": "node -r dotenv/config ./scripts/generate-supabase-types.js"
   }
 }
